Improve routing and test
